# libriscv

./: .gitignore  .gitmodules  Dockerfile  LICENSE.txt  README.md  cabal.project  channels.scm  fourmolu.yaml  guix.scm  libriscv.cabal  manifest.scm  riscv-tiny.cabal  stack.yaml
.githooks/: pre-commit
.github/workflows/: buildAndRunTests.yml
app/: Decoder.hs  Executor.hs  Loader.hs  Main.hs  Memory.hs  Register.hs  Tracer.hs  Utils.hs
decoder/: .gitignore  README.md  decoder.tmpl  field.go  generator.go  go.mod  instr_dict.yaml  main.go  parser.go
example/: README.md  cabal.project  example.S  riscv-ift.cabal
example/src/: Interpreter.hs  Main.hs
golden/: run.sh
golden/bitwise/: output  test.S
golden/halfs-and-bytes/: output  test.S
golden/immediate-shifts/: output  test.S
golden/mul/: output  post-process.sh  test.c
golden/slti-sltiu/: output  test.S
golden/store-and-load/: test.S
golden/uncond-jump/: output  test.S
internal/LibRISCV/Internal/Decoder/: Generator.hs  Instruction.hs  Opcodes.hs  YamlParser.hs
lib/: LibRISCV.hs
lib/LibRISCV/: CmdLine.hs  Loader.hs  Semantics.hs  Utils.hs
lib/LibRISCV/Effects/Decoding/: Language.hs
lib/LibRISCV/Effects/Decoding/Default/: Interpreter.hs
lib/LibRISCV/Effects/Expressions/: Expr.hs  Generator.hs  Language.hs  Type.hs
lib/LibRISCV/Effects/Expressions/Default/: Interpreter.hs
lib/LibRISCV/Effects/Logging/: Language.hs
lib/LibRISCV/Effects/Logging/Default/: Interpreter.hs
lib/LibRISCV/Effects/Operations/: Language.hs
lib/LibRISCV/Effects/Operations/Default/: Interpreter.hs
lib/LibRISCV/Effects/Operations/Default/Machine/: Memory.hs  Register.hs
lib/LibRISCV/Semantics/: Default.hs  Utils.hs
lib/LibRISCV/Semantics/RV32_I/: Default.hs
lib/LibRISCV/Semantics/RV_I/: Default.hs
lib/LibRISCV/Semantics/RV_M/: Default.hs
mkDecoder/: README.md  decoder.tmpl  field.go  generator.go  go.mod  instr_dict.yaml  main.go  parser.go
riscv-tests/: Main.hs  cabal.project  riscv-test.cabal  run.sh
riscv-tests/data/: instr_dict.yaml
riscv-tests/include/: riscv_test.h
src/: CmdLine.hs  Decoder.hs  Executor.hs  Instructions.hs  LibRISCV.hs  Loader.hs  Memory.hs  Types.hs
src/Common/: Coproduct.hs  Types.hs  Utils.hs
src/Common/Effects/: Noop.hs
src/Common/Machine/Standard/: Memory.hs  Register.hs
src/Descriptions/Standard/: AST.hs
src/Effects/Logging/: InstructionFetch.hs
src/Effects/Machine/: Expression.hs  Instruction.hs
src/Interpreter/Concrete/: Executor.hs  Memory.hs  Register.hs
src/Interpreter/Logging/: InstructionFetch.hs
src/LibRISCV/: CmdLine.hs  Decoder.hs  Loader.hs  Utils.hs
src/LibRISCV/Decoder/: Generator.hs  Instruction.hs  Opcode.hs  Opcodes.hs  YamlParser.hs
src/LibRISCV/Effects/Decoding/: Language.hs
src/LibRISCV/Effects/Decoding/Default/: Interpreter.hs
src/LibRISCV/Effects/Expressions/: Expr.hs  Generator.hs  Language.hs
src/LibRISCV/Effects/Expressions/Default/: EvalE.hs  Interpreter.hs
src/LibRISCV/Effects/Logging/: InstructionFetch.hs  Language.hs
src/LibRISCV/Effects/Logging/Default/: Interpreter.hs
src/LibRISCV/Effects/Operations/: Language.hs
src/LibRISCV/Effects/Operations/Default/: Interpreter.hs
src/LibRISCV/Effects/Operations/Default/Machine/: Memory.hs
src/LibRISCV/Machine/: Interpreter.hs  Memory.hs  Register.hs
src/LibRISCV/Machine/Standard/: Interpreter.hs  Memory.hs  Register.hs
src/LibRISCV/Semantics/: Default.hs
src/LibRISCV/Semantics/RV32_I/: Default.hs
src/LibRISCV/Semantics/RV_I/: Default.hs
src/LibRISCV/Semantics/RV_M/: Default.hs
src/LibRISCV/Spec/: AST.hs  Expr.hs  Instruction.hs  Operations.hs
src/Machine/Standard/: Interpreter.hs  Memory.hs  Register.hs
src/Spec/: AST.hs  Expr.hs  Instruction.hs
test/: ArchStateTest.hs  DecoderTest.hs  Main.hs
tests/: run.sh
tests/branch-instr/: output  test.S
tests/mul/: Makefile  bootstrap.S
tests/store-and-load/: output
tests/uncond-jump/: output  test.S
