cabal-version:      2.4
name:               libriscv
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            GPL-3.0-or-later
author:             Sören Tempel
maintainer:         soeren@soeren-tempel.net

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    -- Modules included in this executable, other than Main.
    exposed-modules: Decoder
                   , Loader
                   , CmdLine
                   , Common.Types
                   , Common.Utils
                   , Effects.Logging.InstructionFetch
                   , Machine.Standard.Register
                   , Machine.Standard.Memory
                   , Machine.Standard.Interpreter
                   , Spec.AST
                   , Spec.Expr

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base                   >= 4.15.0.0
        , array                ^>= 0.5.4.0
        , filepath             ^>= 1.4.100.0
        , singletons           ^>= 3.0.1
        , bytestring           ^>= 0.11.3.1
        , exceptions           ^>= 0.10.5
        , melf                 ^>= 1.1.0
        , freer-simple         ^>= 1.2.1.2
        , conversion           ^>= 1.2.1
        , optparse-applicative  >= 0.16.1 && <0.17

    hs-source-dirs:   src
    default-language: Haskell2010

executable riscv-tiny
    main-is:              Main.hs
    hs-source-dirs:       app
    build-depends:
        base                    >= 4.15.0.0
        , libriscv              >= 0.1.0.0
        , freer-simple         ^>= 1.2.1.2
        , optparse-applicative  >= 0.16.1 && <0.17

test-suite test
    default-language:
      Haskell2010
    type:
      exitcode-stdio-1.0
    hs-source-dirs:
      test
    main-is:
      Main.hs
    other-modules:
      DecoderTest
      ArchStateTest
    build-depends:
        base          >= 4.15.0.0
      , array        ^>= 0.5.4.0
      , tasty        ^>= 1.4.2.3
      , tasty-hunit  ^>= 0.10.0.3
      , bytestring   ^>= 0.11.3.1
      , libriscv    >= 0.1.0.0
