cabal-version:      2.4
name:               libriscv
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            MIT
author:             Sören Tempel, Tobias Brandt, and Christoph Lüth
maintainer:         Group of Computer Architecture <riscv@informatik.uni-bremen.de>
copyright:          (c) 2022 University of Bremen
data-files: 
    data/instr_dict.yaml
-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

common opts
    ghc-options:    -Wincomplete-patterns -Wincomplete-uni-patterns -Wunused-matches -Werror

library libriscv-internal
    import:          opts

    exposed-modules: LibRISCV.Internal.Decoder.Generator
                   , LibRISCV.Internal.Decoder.Opcodes
                   , LibRISCV.Internal.Decoder.Instruction
                   , LibRISCV.Internal.Decoder.YamlParser

    build-depends:
        base
        , yaml                  >= 0.11.8.0
        , containers
        , template-haskell
        , bv
        , file-embed

    hs-source-dirs:   internal
    default-language: Haskell2010

library
    import:          opts

    exposed-modules: LibRISCV
                   , LibRISCV.Loader
                   , LibRISCV.CmdLine
                   , LibRISCV.Effects.Decoding.Language
                   , LibRISCV.Effects.Decoding.Default.Interpreter
                   , LibRISCV.Effects.Operations.Language
                   , LibRISCV.Effects.Operations.Default.Interpreter
                   , LibRISCV.Effects.Operations.Default.Machine.Register
                   , LibRISCV.Effects.Operations.Default.Machine.Memory
                   , LibRISCV.Effects.Logging.Language
                   , LibRISCV.Effects.Logging.Default.Interpreter
                   , LibRISCV.Effects.Expressions.Language
                   , LibRISCV.Effects.Expressions.Default.Interpreter
                   , LibRISCV.Effects.Expressions.Default.EvalE
                   , LibRISCV.Effects.Expressions.Expr
                   , LibRISCV.Semantics.Default
                   , LibRISCV.Semantics.Utils
                   , LibRISCV.Semantics.RV_I.Default
                   , LibRISCV.Semantics.RV32_I.Default
                   , LibRISCV.Semantics.RV_M.Default
    other-modules: LibRISCV.Utils
                   , LibRISCV.Effects.Expressions.Type
                   , LibRISCV.Effects.Expressions.Generator

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        libriscv-internal
        , base                    >= 4.15.0.0
        , array                ^>= 0.5.4.0
        , filepath             ^>= 1.4.2.1
        , bytestring            >= 0.10.10 && <0.12
        , exceptions           ^>= 0.10.4
        , melf                 ^>= 1.3.0
        , freer-simple         ^>= 1.2.1.2
        , transformers         ^>= 0.6.1.1
        , optparse-applicative  >= 0.16.1 && <0.19
        , bv                   ^>= 0.5
        , parameterized-utils  ^>= 2.1.6.0
        , extra                 >= 1.7.0
        , template-haskell      >= 2.18.0

    hs-source-dirs:   lib
    default-language: Haskell2010

executable riscv-tiny
    import:               opts
    main-is:              Main.hs
    hs-source-dirs:       app
    default-language:     Haskell2010
    build-depends:
        base                    >= 4.15.0.0
        , libriscv              >= 0.1.0.0
        , freer-simple         ^>= 1.2.1.2
        , optparse-applicative  >= 0.16.1 && <0.19
        , bv                   ^>= 0.5
test-suite test
    import: opts
    default-language:
      Haskell2010
    type:
      exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs

    other-modules:
      DecoderTest
      ArchStateTest

    build-depends:
      libriscv-internal
      , base         >= 4.15.0.0
      , array        >= 0.5.4.0
      , tasty        >= 1.4.2.3
      , tasty-hunit  >= 0.10.0.3
      , bytestring   >= 0.10.10 && <0.12
      , bv          ^>= 0.5
      , libriscv     >= 0.1.0.0
