cabal-version:      2.4
name:               riscv-tiny
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            GPL-3.0-or-later
author:             Sören Tempel
maintainer:         soeren@soeren-tempel.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable riscv-tiny
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Decoder

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.0.0
        , filepath
        , singletons
        , bytestring
        , melf

    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite doctest
    type:                 exitcode-stdio-1.0
    default-language:     Haskell2010
    hs-source-dirs:       test
    main-is:              Main.hs
    build-depends:        base
                          , doctest
