cabal-version:      2.4
name:               riscv-test
version:            0.1.0.0

license:            MIT
author:             Sören Tempel, Tobias Brandt, and Christoph Lüth
maintainer:         Group of Computer Architecture <riscv@informatik.uni-bremen.de>
copyright:          (c) 2022 University of Bremen

executable riscv-test
    main-is:              Main.hs
    default-language:     Haskell2010
    build-depends:
        , libriscv              ^>= 0.1.0.0
        , freer-simple
        , transformers
        , optparse-applicative
        , bv
        , base
